<resources>
    <string name="app_name">团时代</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--注册界面-->
    <string name="input_name">请输入用户名</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_code_hint">输入好友邀请码为好友筹集资金</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="next">下一步</string>
    <string name="service_items">注册意味着您同意服务条款和隐私政策</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">1-10位字符</string>
    <string name="finish">完成</string>
    <string name="register_password">密码</string>

    <!--忘记密码界面-->
    <string name="find_password">找回密码</string>
    <string name="set_loginpwd">设置登录密码</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_password_hint">请输入8位字母,数字或符号</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="register_password_hint">8-10位字符</string>
    <string name="get_verificate_code_again">再次获取验证码</string>
    <string name="no_invitecode_todiscovery">如果没有邀请码则可以前往发现页发起活动</string>
    <string name="input_invitecode_togroup">输入邀请码加入好友发起的活动</string>
    <string name="submit">提交</string>
    <string name="group">组团</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>
