<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="ResAuto">

    <com.lbadvisor.AgeGroup.view.TitleBar
        android:id="@+id/titlebar"
        style="@style/matchWidth"
        app:isrightvisible="false"
        app:titlecolor="@android:color/black"
        app:titletext="@string/register">
    </com.lbadvisor.AgeGroup.view.TitleBar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/phone_number"
                android:textColor="#444444"
                android:textSize="16sp" />

            <com.lbadvisor.AgeGroup.view.ClearableEditText
                android:id="@+id/phone_num"
                style="@style/matchWidth"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="16sp"/>

        </RelativeLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/verification_code"
                android:textColor="#444444"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/verification_code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_get_Verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:text="@string/get_verification_code"
                android:textColor="#21c1d1"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/invite_code"
                android:textColor="#444444"
                android:textSize="16sp" />

            <com.lbadvisor.AgeGroup.view.ClearableEditText
                android:id="@+id/invite_code"
                style="@style/matchWidth"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/invite_code_hint"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />


        <Button
            android:id="@+id/register_next"
            style="@style/matchWidth"
            android:layout_marginTop="15dp"
            android:background="@color/GREEN"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/service_items"
            style="@style/matchWidth"
            android:layout_marginTop="10dp"
            android:text="@string/service_items"
            android:textColor="#444444"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>