<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.lbadvisor.AgeGroup.view.TitleBar
        android:id="@+id/titlebar"
        style="@style/matchWidth"
        app:isrightvisible="false"
        app:titlecolor="@android:color/black"
        app:titletext="@string/set_loginpwd">

    </com.lbadvisor.AgeGroup.view.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/input_password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.lbadvisor.AgeGroup.view.ClearableEditText
                android:id="@+id/et_setlogpwd"
                style="@style/matchWidth"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/input_password_hint"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/confirm_password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.lbadvisor.AgeGroup.view.ClearableEditText
                android:id="@+id/et_setlogpwd_confirm"
                style="@style/matchWidth"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/confirm_password_hint"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />


        <Button
            android:id="@+id/btn_setlogingpwd_finish"
            style="@style/matchWidth"
            android:layout_marginTop="15dp"
            android:background="#21c1d1"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>