<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lbadvisor.AgeGroup.view.TitleBar
        android:id="@+id/titlebar"
        style="@style/matchWidth"
        app:isrightvisible="false"
        app:titlecolor="@android:color/black"
        app:titletext="@string/find_password">
    </com.lbadvisor.AgeGroup.view.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#808080"
            android:textSize="14sp"
            android:text="找回密码的验证码已发至您的手机" />

        <TextView
            android:id="@+id/tv_findpwd_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:text="18690184545" />

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/verification_code"
                android:textColor="#444444"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/Verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/verification_code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_findpwd_get_Verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                tools:text="@string/get_verificate_code_again"
                android:textColor="#21c1d1"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            style="@style/divider_line"
            android:layout_marginTop="10dp" />
        <Button
            android:id="@+id/btn_findpwd_next"
            style="@style/matchWidth"
            android:layout_marginTop="20dp"
            android:background="#21c1d1"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>