<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match"
    android:background="#F4F4F4"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"/>-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_input_invitecode_hint"
            style="@style/matchWidth"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                style="@style/matchWidth"
                android:gravity="center"
                android:text="-----温馨提示-----" />

            <TextView
                style="@style/textstyle_matchwidth_16"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/no_invitecode_todiscovery" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/ll_input_invitecode_hint"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_vericode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:hint="@string/input_invitecode_togroup"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="2"/>-->

</LinearLayout>