<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp">

    <RelativeLayout
        style="@style/match"
        android:layout_above="@+id/ll_register_nameandpwd">

        <com.lbadvisor.AgeGroup.view.CircularImageView
            android:id="@+id/iv_avator"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_default_head" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_register_nameandpwd"
        style="@style/matchWidth"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.lbadvisor.AgeGroup.view.ClearableEditText
            android:id="@+id/et_register_phone"
            style="@style/matchWidth"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_register_phone"
            android:drawablePadding="10dp"
            android:hint=""
            android:maxLength="11"
            android:phoneNumber="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#2dc1c8" />

        <com.lbadvisor.AgeGroup.view.ClearableEditText
            android:id="@+id/et_register_pwd"
            style="@style/matchWidth"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_register_locker"
            android:drawablePadding="10dp"
            android:hint=""
            android:inputType="textPassword"
            android:password="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#2dc1c8" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/matchWidth"
        android:layout_below="@id/ll_register_nameandpwd"
        android:layout_marginTop="20dp"
        android:background="#2dc1c8"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/ll_register_forget"
        style="@style/matchWidth"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="#444444"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forget_password"
            android:textColor="#444444"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>